apps/base/musicseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicseerr
spec:
  ingressClassName: traefik
  rules:
    - host: musicseerr.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musicseerr
                port:
                  name: http
